# calculadora_poblacional_atun

./: README.md  datos_atun_aleta_amarilla.csv  pyproject.toml  setup.cfg
docs/: README.md  TECHNICAL.md  USER_GUIDE.md
notebooks/: exploratory_analysis.ipynb
src/: main.py
src/data/: sample_data.csv
src/fitting/: __init__.py  curve_fit.py
src/gui/: app.py  components.py
src/models/: beverton_holt.py
src/types/: types.py
src/utils/: io.py  plotting.py
tests/: test_fitting.py  test_models.py
