[tool.poetry]
name = "tuna-population-calculator"
version = "0.1.0"
description = "An interactive calculator to model and analyze the population growth of tuna using the Beverton-Holt model and numerical curve fitting methods."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
matplotlib = "^3.4"
scipy = "^1.7"
tkinter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"