[metadata]
name = tuna-population-calculator
version = 0.1.0
description = An interactive calculator for modeling and analyzing the population growth of tuna using the Beverton-Holt model and numerical curve fitting methods.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/tuna-population-calculator
license = MIT

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    pandas
    tkinter

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tuna-calculator = main:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
